--- a/workflows/holy-mouse-3f4c/public/index.html
+++ b/workflows/holy-mouse-3f4c/public/index.html
@@ -18,8 +18,8 @@
 					h1.textContent = text;
 				});
 
-			const button = document.getElementById("button");
-			button.addEventListener("click", () => {
+			const button = document.getElementById('button');
+			button.addEventListener('click', () => {
 				fetch('/random')
 					.then((resp) => resp.text())
 					.then((text) => {
